--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@expo-google-fonts/nunito": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@types/react-native-linear-gradient": "^2.4.0",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
     "expo-image": "~1.0.1",
@@ -26,12 +28,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-datepicker": "^1.7.2",
     "react-native-linear-gradient": "^2.7.3",
+    "react-native-paper": "^5.9.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "@types/react-native-datepicker": "^1.7.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.4"
   },
