--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "deploy": "git add . && git commit -m \"deply\" && git push origin main"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
