--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-paper": "^5.9.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
