--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo-google-fonts/nunito": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -32,8 +33,8 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-paper": "^5.9.0",
-    "react-native-web": "~0.18.10",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "react-native-uuid": "^2.0.1",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
