--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@expo-google-fonts/nunito": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/webpack-config": "^18.0.1",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@tabler/icons-react": "^2.30.0",
     "@types/react-native-linear-gradient": "^2.4.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
@@ -29,12 +31,15 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-native": "0.71.8",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-paper": "^5.9.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "react-native-webview": "^13.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
